--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
                 <button class="menu-button" data-difficulty="medium">🍓 初级 (6x6)</button>
                 <button class="menu-button" data-difficulty="hard">🏆 中级 (9x9 简单)</button>
                 <button class="menu-button" data-difficulty="expert">👑 高级 (9x9 普通)</button>
+                <button class="menu-button" data-action="settings">⚙️ 设置</button>
+            </div>
+
+            <div class="settings-area" id="settings-area" style="display:none;">
+                <h2>游戏设置</h2>
+                <div class="setting-item">
+                    <label for="check-limit-input">“检查”最高次数 (0或不填为无限):</label>
+                    <input type="number" id="check-limit-input" min="0" placeholder="无限次">
+                </div>
+                <div class="setting-item">
+                    <label for="hint-limit-input">“提示”最高次数 (0或不填为无限):</label>
+                    <input type="number" id="hint-limit-input" min="0" placeholder="无限次">
+                </div>
+                <button id="save-settings-button" class="control-button">保存设置</button>
+                <button id="settings-back-button" class="control-button">返回菜单</button>
             </div>
 
             <div class="game-area" id="game-area" style="display:none;">
@@ -71,6 +86,7 @@
         <div class="modal-content">
             <h2>🎉 太棒啦！你完成了！🎉</h2>
             <p>用时: <span id="final-time"></span></p>
+            <div id="game-stats"></div>
             <div id="stars-earned"></div>
             <button id="play-again-button">再玩一局</button>
             <button id="modal-back-to-menu-button">返回菜单</button>
